# evolutionary_algorithms

./: .gitignore  CMakeLists.txt  README.md  todo.txt
include/: Fitness.hpp  Globals.hpp  Queue.hpp  Segment.hpp
src/: Fitness.cpp  Queue.cpp  Segment.cpp  main.cpp
